# pcc-labor-tender-crawler

./: README.md  build_exe.ps1  pyproject.toml
.github/workflows/: daily-pcc-crawler.yml
Service Proposal/: render_budget_highlight_image.ps1  經費概估.xlsx
Web Crawler/: .gitignore  CONTEXT_SUMMARY.md  CRON_JOB_ORG_SETUP.md  README_AUTOMATION.md  export_pcc_labor_tenders.py  make_google_drive_oauth_config.py  requirements.txt  run_daily_workflow.py  run_pcc_labor_tenders_today.ps1  test_export_pcc_labor_tenders.py  test_run_daily_workflow.py
output/: 2330_2026-04_daily.csv  gui_flow_sample.csv  sample_90d.csv
src/: core.py  gui.py  main.py
stock/: 2308_broker_targets.json  2308_check_90days_margin.normalized.csv  2308_previous_report_snapshot.json  2308_recent_news.json  2308_report_comparison.json  2308_台達電_投資顧問分析報告.html  2454_broker_targets.json  2454_check_90days_margin.normalized.csv  2454_recent_news.json  2454_聯發科_投資顧問分析報告.html  3711_broker_targets.json  3711_check_90days_margin.normalized.csv  3711_previous_report_snapshot.json  3711_recent_news.json  3711_report_comparison.json  3711_日月光投控_投資顧問分析報告.html  inject_stock_report_comparison.py  股票HTML.html
take time off/: .gitignore  README.md  gradle.properties  settings.gradle.kts
take time off/app/: build.gradle.kts
take time off/app/src/main/: AndroidManifest.xml
take time off/app/src/main/java/com/tim/taketimeoff/: MainActivity.kt  (+1 more)
take time off/app/src/main/res/drawable/: ic_launcher.xml
take time off/app/src/main/res/values/: strings.xml  styles.xml
tests/: test_main.py
(+10 files in other folders)
